--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,6 +210,7 @@ nav .menu-btn i{
 }
 .card-group {
     margin-top: 50vh;
+    margin-left: 3vw;
     
 }
 .card-group-title {
@@ -252,7 +253,7 @@ nav .menu-btn i{
 }
 .card-img-top {
     width: 200px;
-    height: 200px;
+    height: 120px;
 }
 .card-footer {
     margin-top: 10px;
@@ -414,6 +415,10 @@ nav .menu-btn i{
         width: calc(100% / 4 - 20px);
         padding: 10px;
     }
+    .footer-div-1{
+        margin-right: 5em;
+        text-align: justify;
+    }
     .footer span{
         font-size: 20px;
         color: white;
@@ -441,7 +446,7 @@ nav .menu-btn i{
         top: 15%;
         left: 25%;
         width: 50%;
-        height: 70%;
+        height: 75%;
         transition: .4s;
     }
     .modalWrapper {
@@ -471,17 +476,13 @@ nav .menu-btn i{
     .credit-title {
         padding: 20px;
     }
-    .credit {
-        display: flex;
-        
-        flex-wrap: wrap;
-        padding: 10px;
-        font: Poppins;
-    
+    .credit li{
+        padding: 5px;
     }
     .credit a{
     text-decoration: underline;
     }
+
     .credit-list {
         padding: 10px;
         justify-content: justify;
