--- a/src/css/style.css
+++ b/src/css/style.css
@@ -453,16 +453,17 @@ nav .menu-btn i{
         position: absolute;
         top: 50%;
         left: 50%;
+        overflow-y: auto; 
         transform: translate(-50%, -50%);
         border-radius: 25px;
-        width: 50%;
+        width: 70%;
         max-width: 700px;
         padding: 20px 40px;
     }
     .clModal {
         position: absolute;
         top: 2rem;
-        right: -50px;
+        right: 0;
         font-size: 4rem;
         cursor: pointer;
     }
@@ -483,19 +484,8 @@ nav .menu-btn i{
     text-decoration: underline;
     }
 
-    .credit-list {
-        padding: 10px;
-        justify-content: justify;
-    } 
 
 
-
-
-
-
-
-
-/*TODO: Ajustar responsividade*/
 @media (max-width:315px) {
     #btn-bio{
         margin-bottom: 45vh;
@@ -767,7 +757,7 @@ nav .menu-btn i{
         
     }
 }
-/*TODO: Ajustar responsividade*/
+
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
     .container {
         width: 90vw;
@@ -890,15 +880,6 @@ nav .menu-btn i{
     }
  
 }
-@media (max-width: 768px) {
-    .footer-div-1, .footer-div-2, .footer-div-3, .footer-div-4{
-        width: calc(50% - 20px);
-        padding: 10px;
-    }
-    .footer-div{
-        padding: 60px 0px 40px 0px;
-    }
-}
 @media (max-width: 920px) {
    
     .logo-image {
@@ -942,6 +923,69 @@ nav .menu-btn i{
     nav ul li a:hover{
         background: #09caa8;
     }   
+    .modal {
+        top: 15%;
+        left: 10%;
+        width: 70%;
+    }
+    .modalWrapper {
+        width: 90%;
+        margin: 0;
+        overflow-y: scroll; 
+        max-height: 400px; 
+        border-radius: 10px;
+        padding: 0;
+    }
+    .clModal {
+        top: -2rem;
+        right: 0;
+    }
+    .credit-title {
+        padding: 0;
+    }
+    .credit {
+        margin-left: 0;
+    }
+    .credit li{
+        font-size: 0.90em;
+        padding: 2px;
+    }
+}
+@media (max-width: 1132px) {
+    .modal {
+        top: 15%;
+        left: 10%;
+        width: 70%;
+    }
+    .modalWrapper {
+        width: 90%;
+        margin: 0;
+        overflow-y: auto; 
+        max-height: 400px; 
+        border-radius: 10px;
+        padding: 0;
+    }
+    .clModal {
+        top: -2rem;
+        right: 0;
+    }
+    .credit-title {
+        padding: 0;
+    }
+    .credit {
+        margin-left: 0;
+    }
+    .credit li{
+        font-size: 0.90em;
+        padding: 2px;
+    }
+    .footer-div-1, .footer-div-2, .footer-div-3, .footer-div-4{
+        width: calc(100% - 10px);
+        padding: 10px;
+    }
+    .footer-div{
+        padding: 60px 0px 40px 0px;
+    }
 }
 
   
